build: implement prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 80,
+  "useTabs": false,
+  "semi": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "endOfLine": "auto"
 }
