--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "concurrently": "^7.2.2",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
